--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Replit user <<>>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 requests = "^2.28.1"
+discord = "^1.7.3"
 
 [tool.poetry.dev-dependencies]
 
